修正啟動程式的行為
